# zmq-collectives-rs

./: Cargo.toml  README.md  zmq-collectives-rs.spdx
examples/: client.rs  router_router.rs  server.rs
src/: lib.rs
