[package]
name = "zmq-collectives-rs"
version = "0.1.0"
authors = ["ct.clmsn <ct_clmsn_at_gmail_dot_com>"]
edition = "2018"
license-file = "LICENSE_1_0.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version="0.8", features = ["v4"] }
serde = "1.0.125"
bincode = "1.3.3"
zmq = "0.9"
